<resources>
    <string name="app_name">Digitron Global</string>
    <string name="digitron_global">Digitron Global</string>
    <string name="shop_now">SHOP NOW</string>
    <string name="home">Home</string>
    <string name="products">Products</string>
    <string name="about_us">About Us</string>
    <string name="contact_us">Contact Us</string>
    <string name="details">
        DIGITRON SOFTWARES is  known as reputed name in the IT industry in NAGPUR(INDIA). A decade of services and solutions par excellence, the huge clientele base with complete customer satisfaction is our motto. Once having worked with us, it is impossible to expect such quality and professionalism elsewhere. Our sheer dedication and expertise has made us a commendable entity in the web development sector and our motto is all-inclusive development with customer satisfaction. Our goal is overarching growth and making a paramount service development entity which caters to all kinds of needs of the customers.
    </string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="please_enter_name">Please Enter name</string>
    <string name="email">email</string>
    <string name="comment_or_message">Comment or message</string>
    <string name="enter_name_here">Enter Name Here</string>
    <string name="send_us">Send Us</string>
    <string name="http_digitronsoftwaresandtechnology_com">digitronsoftwaresandtechnology.com</string>
    <string name="sales_digitronglobal_com">sales@digitronglobal.com</string>
    <string name="md_digitronglobal_com">MD@digitronglobal.com</string>
    <string name="_91_7709266577">+91 7709266577</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="sort">Sort</string>
    <string name="filter">Filter</string>
    <string name="nav_close">Close</string>
    <string name="nav_open">Open</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_transform">Transform</string>
    <string name="menu_reflow">Reflow</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_settings">Settings</string>

    <string name="lorem_ipsum_title">Lorem Ipsum"</string>
    <string name="lorem_ipsum">Lorem Ipsum is simply placeholder text of the printing and
        typesetting industry. Lorem Ipsum has been the industry\'s standard placeholder text ever
        since the 1500s, when an unknown printer took a galley of type and scrambled it to make a
        type specimen book"
    </string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="_91">+91</string>
    <string name="terms">
        1.DEFINITIONS
            1.1 “Customer” means the person, firm, company or other organisation purchasing the product.
            1.2 “Confidential Information” means all information confidential to the Customer whether relating to the Customer’s business, customers, clients, suppliers or otherwise but excluding information now or at any time hereafter becoming generally known or accessible to the general public (unless due to the default of the Company hereunder) and information obtained by the Company from a third party free of restrictions on use or disclosure.
            1.3 “Contract” means the agreement between the Customer and the Company covering the products provided.
            1.4 “Intellectual Property Rights” means all and any of the following, namely patents, designs, registered designs (and applications for any of the same) copyright, design right, inventions, improvements, discoveries, techniques, know-how and any other intellectual property rights.
            1.5 “Products” means the products and/or services to be delivered under this Contract.
            1.6 “Company” means Marketing Software.

        2.COMPANY’S OBLIGATIONS
            2.1 The Company will provide the Product to the Customer in accordance with the Contract.
            2.2 The company never share clients personal details with any third party.
            2.3 The Company will use all reasonable endeavours to provide the Products to the Customer within the estimated timings provided but all timings agreed to by the Contractor are business estimates only (but given in good faith) and the Company will not be liable for any loss, injury, damage or expenses arising directly or indirectly from any delay and time will not and cannot ever be of the essence in respect of the Contractor’s performance of its obligations hereunder.

        3.INVOICING &amp; PAYMENT
            3.1: The customer has to pay full payment in advance.
            3.2: If payment for licence renewal is not received by the due date stated on the renewal quotation, then we reserve the right to deem the licence expired and for any renewal to be invoiced a full list price.
            3.3: There is no refund policy by the company any cost.

        4.FORCE MEASURE
            4.1 Neither party shall be liable to the other under this Agreement, nor deemed in breach of this Agreement, for failure to carry out its provisions to the extent that such failure is caused by any cause beyond the parties’ respective reasonable control, including without limitation fire, war, riot, sabotage, sickness or industrial action.

        5.INTELLECTUAL PROPERTY RIGHTS
            5.1 Each party acknowledges the existence of the other’s intellectual property at the commencement of this Contract and neither party obtains any right to the other’s intellectual property by entering into this contract
            5.2 Subject to the Customer first paying to the Company all sums payable to the Company hereunder, the Customer shall obtain a Run Time Licence for its use of the whole system, including Third Party Components, subject to all the terms and conditions attaching to these items.
            5.3 The Company shall not infringe the Intellectual Property Rights of any third party and shall indemnify the Customer against all claims, costs and expenses that the Customer may suffer as a result of any such infringement.

        6.PROPRIETARY RIGHTS IN SOFTWARE
            6.1 The Customer hereby acknowledges that any proprietary rights in any Product supplied hereunder including but not limited to any title or ownership rights, patent rights, copyrights and trade secret rights shall at all times and for all purposes rest and remain vested in the Product owner.
            6.2 The Customer hereby acknowledges that it is its sole responsibility to comply with any terms and conditions of licence attaching to Products supplied and delivered by the Company (including if so required the execution and return of a Product licence). The Customer is hereby notified that failure to comply with such terms and conditions could result in the Customer being refused a software licence or having the same revoked by the Product owner. The Customer further agrees to indemnify the Company in respect of any costs, charges or expenses incurred by the Company at the suit of a Product owner as a result of any breach by the Customer of such conditions.

        7.DATA PROTECTION
            7.1 By entering into this Contract, the Customer agrees that any “personal data”, as defined by the Data Protection Act 2018 provided to the Company pursuant to this Contract may be processed by the Company for the following purposes:
                Administration and provisioning of the Products, including support and billing of the Products.
                To identify and inform the Customer, whether by mail, facsimile, electronic mail or other means of communication of additional services and products available from the Company that may be of interest.
            7.2 By entering into this Contract, the Customer represents and warrants that it has drawn the attention of its employees and agents to this clause and has obtained informed and express consent from them to the processing of their data as outlined.
            7.3 If the Customer, its employees or agents do not wish to receive further information from the Company, then a request to this effect should be sent to the Company’s Commercial Director.

        8.MISCELLANEOUS
            8.1 If any of the terms of this Contract are held to be void or unenforceable by any reason of law they shall be void or unenforceable to that extent only and no further and all other terms shall remain valid and fully enforceable.
            8.2 The Customer shall not have any right of set-off.
            8.3 No indulgence granted by either party to the other in relation to any term hereof shall be deemed a waiver of such term or prejudice the later enforcement of that or any other term hereof.
            8.4 The headings in this Contract are for convenience only and shall not affect its interpretation.
    </string>
    <string name="user">User</string>
</resources>