<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ContactUs">

    <EditText
        android:id="@+id/name"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/button_outline"
        android:hint="@string/enter_name_here"
        android:inputType="text"
        android:padding="10dp"
        android:singleLine="true"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.08"
        app:layout_constraintHorizontal_bias="0.14"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.01"
        app:layout_constraintWidth_percent="0.6" />

    <EditText
        android:id="@+id/email"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="3dp"
        android:background="@drawable/button_outline"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:padding="10dp"
        android:singleLine="true"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.08"
        app:layout_constraintHorizontal_bias="0.14"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/name"
        app:layout_constraintVertical_bias="0.0"
        app:layout_constraintWidth_percent="0.6" />

    <EditText
        android:id="@+id/message"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="3dp"
        android:background="@drawable/button_outline"
        android:gravity="start"
        android:hint="@string/comment_or_message"
        android:inputType="textMultiLine"
        android:padding="10dp"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.25"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email"
        app:layout_constraintVertical_bias="0.0"
        app:layout_constraintWidth_percent="0.9" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.05" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.95" />

    <Button
        android:id="@+id/sendUs"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/red"
        android:paddingStart="15dp"
        android:paddingTop="10dp"
        android:paddingEnd="15dp"
        android:paddingBottom="10dp"
        android:text="@string/send_us"
        android:textColor="@color/white"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.073"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/message"
        app:layout_constraintVertical_bias="0.023" />

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/whatsappLink"
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="36dp"
        android:backgroundTint="@color/red"
        android:onClick="takeMeToWhatsapp"
        app:icon="@drawable/whatsapp_logo"
        app:iconSize="40dp"
        app:iconTint="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.918"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sendUs"
        app:layout_constraintVertical_bias="0.992"
        app:shapeAppearanceOverlay="@style/fabShape"
        tools:ignore="RtlSymmetry" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.2"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sendUs"
        app:layout_constraintVertical_bias="0.17"
        app:layout_constraintWidth_percent="0.9">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.994"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="2"
                android:text="Mobile:- "
                android:textColor="@color/black"
                android:textSize="15sp"
                tools:ignore="HardcodedText,NestedWeights,RtlSymmetry" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="2"
                android:text="Email:- "
                android:textColor="@color/black"
                android:textSize="15sp"
                tools:ignore="HardcodedText,RtlSymmetry" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="2"
                android:text="Email:- "
                android:textColor="@color/black"
                android:textSize="15sp"
                tools:ignore="HardcodedText,RtlSymmetry" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="2"
                android:text="Website:- "
                android:textColor="@color/black"
                android:textSize="15sp"
                tools:ignore="HardcodedText,RtlSymmetry" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="4"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="2"
                android:text="@string/_91_7709266577"
                android:textColor="@color/black"
                android:textSize="15sp"
                tools:ignore="NestedWeights" />

            <TextView
                android:id="@+id/mdEmail"
                android:onClick="takeMeToMDEmail"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="2"
                android:text="@string/md_digitronglobal_com"
                android:textColor="#287EF8"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/salesEmail"
                android:onClick="takeMeToSalesEmail"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="2"
                android:text="@string/sales_digitronglobal_com"
                android:textColor="#287EF8"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/websiteUrl"
                android:onClick="takeMeToWebsite"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="2"
                android:text="@string/http_digitronsoftwaresandtechnology_com"
                android:textColor="#287EF8"
                android:textSize="15sp" />

        </LinearLayout>

    </LinearLayout>

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:text="Follow us on"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.08"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        app:layout_constraintVertical_bias="0.278"
        tools:ignore="HardcodedText" />

    <ImageView
        android:id="@+id/facebook"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:onClick="takeMeToFacebook"
        android:src="@drawable/ic_facebook_square_brands"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.05"
        app:layout_constraintHorizontal_bias="0.114"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.201"
        app:layout_constraintWidth_percent="0.1" />

    <ImageView
        android:id="@+id/instagram"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:onClick="takeMeToInstagram"
        android:src="@drawable/insta"
        app:layout_constraintBottom_toBottomOf="@+id/facebook"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.05"
        app:layout_constraintHorizontal_bias="0.25"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/facebook"
        app:layout_constraintVertical_bias="0.333"
        app:layout_constraintWidth_percent="0.1" />

    <ImageView
        android:id="@+id/indeed"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:onClick="takeMeToLinkedin"
        android:src="@drawable/ic_linkedin_brands"
        app:layout_constraintBottom_toBottomOf="@+id/instagram"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.05"
        app:layout_constraintHorizontal_bias="0.39"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/instagram"
        app:layout_constraintVertical_bias="0.333"
        app:layout_constraintWidth_percent="0.1" />

    <ImageView
        android:id="@+id/youtube"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:onClick="takeMeToYoutube"
        android:src="@drawable/ic_youtube_square_brands"
        app:layout_constraintBottom_toBottomOf="@+id/indeed"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.05"
        app:layout_constraintHorizontal_bias="0.524"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/indeed"
        app:layout_constraintVertical_bias="0.333"
        app:layout_constraintWidth_percent="0.1" />

</androidx.constraintlayout.widget.ConstraintLayout>